--- a/src/UserProfileDemo.iOS/UserProfileDemo.iOS.csproj
+++ b/src/UserProfileDemo.iOS/UserProfileDemo.iOS.csproj
@@ -182,10 +182,10 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
     <PackageReference Include="Couchbase.Lite">
-      <Version>3.0.0-beta02</Version>
+      <Version>3.0.0</Version>
     </PackageReference>
-    <PackageReference Include="Xam.Plugin.Media">
-      <Version>5.0.1</Version>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>1.7.1</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
