--- a/src/UserProfileDemo/UserProfileDemo.csproj
+++ b/src/UserProfileDemo/UserProfileDemo.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
-    <PackageReference Include="Xam.Plugin.Media" Version="5.0.1" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Pages\" />
@@ -27,5 +27,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="Converters\ByteToImageFieldConverter.xml" />
+    <None Remove="Xamarin.Essentials" />
   </ItemGroup>
 </Project>
