--- a/src/UserProfileDemo.Core/UserProfileDemo.Core.csproj
+++ b/src/UserProfileDemo.Core/UserProfileDemo.Core.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
@@ -10,6 +10,9 @@
 	<ItemGroup>
 		<Folder Include="ViewModels\" />
 		<Folder Include="Respositories\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="Xamarin.Essentials" Version="1.7.1" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\UserProfileDemo.Models\UserProfileDemo.Models.csproj" />
