--- a/src/UserProfileDemo.Android/Properties/AndroidManifest.xml
+++ b/src/UserProfileDemo.Android/Properties/AndroidManifest.xml
@@ -3,8 +3,7 @@
 	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="30" />
 	<application android:label="UserProfileDemo.Android" android:icon="@drawable/icon">
 		<provider android:name="androidx.core.content.FileProvider" android:authorities="com.couchbase.userprofiledemo.fileprovider" android:exported="false" android:grantUriPermissions="true">
-			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths">
-			</meta-data>
+			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
 		</provider>
 	</application>
 </manifest>
