--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,9 +2,10 @@ name: .NET
 
 on:
   push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+  workflow_dispatch:
+  schedule:
+  - cron: "0 0 * * 0"
 
 jobs:
   build:
